# StarBrief

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-sentinel.yml  weekly-crawler.yml
config/: default_profile.json  exclusions.yaml  sources.yaml
dashboard/: build.ps1  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: CategoryPill.module.css  CategoryPill.tsx  OpportunityCard.module.css  OpportunityCard.tsx  PriorityBadge.module.css  PriorityBadge.tsx  SearchBar.module.css  SearchBar.tsx  Sidebar.module.css  Sidebar.tsx  TaskView.module.css  TaskView.tsx  TimelineBar.module.css  TimelineBar.tsx  TimelineView.module.css  TimelineView.tsx  ViewToggle.module.css  ViewToggle.tsx
dashboard/lib/: types.ts  wada-tokens.ts
db/: __init__.py  connection.py  models.py
db/migrations/: 001_initial.sql
docs/: analysis.html  design_research.md  hermes_evolution_design.md  implementation_plan.md  project_analysis.md
pipeline/: __init__.py
processing/: __init__.py
scrapers/: __init__.py  _template.py  base.py
tests/: conftest.py  test_dedup.py  test_prefilter.py
tests/test_scrapers/: __init__.py
